tests/NormalTests/paczka1/small_fuzzy/69117842.err
Error in line 6: V0nYnDX S174 63,7
Error in line 14: 672vYf A519 85,42
